--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: rgb(158, 158, 158);
+  background-color: rgb(207, 207, 207);
 }
 
 form {
@@ -114,18 +114,13 @@ h1 {
 
 .registrar {
   position: relative;
- 
-  left: 73%;
+  left: 76%;
   cursor: pointer;
 }
 
-footer {
-  position: fixed;
-  transform: translate(50%);
-  text-align: center;
-  width: 50%;
-  border-radius: 25px;
-  height: auto;
-  background-color: #2da136;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.103);
+footer {  
+  justify-content: space-around;  
+  display: flex;  
+  border-radius: 25px;  
+  background-color: #2da136;  
 }
